version 1.6 working with groovy 4.0.29 and java 24, create-app, run-app and package jar